[package]
name = "easycrab"
description = "Cross-platform EasyCrypt V2.x decrypter with some secret"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.3.23", features = ["derive"]}
generic-array = "0.14.7"
aes = "0.8.3"
cbc = "0.1.2"
digest = "0.10.7"
sha1 = "0.10.5"
sha2 = "0.10.7"
